# test_cli

./: .gitignore  README.md  check_cmd.py  log.txt  output.json  pyproject.toml  pytest_html_report.html  test_os_version.sh
app/: output.json  pytest_html_report.html
archive/: output_1723196728.0509346.json  output_1723196885.5278609.json  output_1723196911.1271107.json  output_1723197343.0019004.json  output_1723197991.7362335.json  output_1723379806.630943.json  output_1723379878.2786834.json  output_1723380016.6035595.json  output_1723380050.2554553.json  output_1723380080.1574485.json  output_1723380130.4942594.json  output_1723380157.5567725.json  output_1723380183.2359393.json  output_1723380409.117783.json  output_1723380472.0380902.json  output_1723380517.908074.json  output_1723380535.7801857.json  output_1723380582.5099056.json  output_1723380602.0562637.json  output_1723380636.2154922.json  output_1723381667.6590645.json  output_1723384839.145583.json  output_1723385277.0849125.json  output_1723385398.1855998.json  output_1723385476.3870137.json  output_1723387270.1021993.json  output_1723387674.988821.json  output_1723387843.2697523.json  output_1723391499.9708138.json  output_1723391566.6716928.json  output_1723392902.9864566.json  output_1723393023.052889.json  output_1723393177.7320611.json  output_1723393329.5051205.json  output_1723393473.0196505.json  (+62 more)
temp/: output.json  pyproject.toml  pytest.ini  test.py  test_class.py  test_os.py  test_speed.py
temp/tests/: checkers.py  test_2.py  test_3.py  test_4.py
temp/tst/archive/: arx3.7z  arx4.7z
(+36 files in other folders)
