[tool.poetry]
name = "test-cli"
version = "0.1.0"
description = "pytest_some_try"
authors = ["arletino <titkov@nxt.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.2"
pyyaml = "^6.0.1"
pytest-html = "^4.1.1"
pytest-html-reporter = "^0.2.9"
paramiko = "^3.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = '-vv -s -m "ssh or hst"'
norecursedirs = 'temp'
markers= [  
    'hst', #test fixture folder create with folder_factor
    'ssh', #test throw ssh
]